@@ -21,7 +21,7 @@ define("tinymce/tableplugin/CellSelection", [
 	"tinymce/util/Tools"
 ], function(TableGrid, TreeWalker, Tools) {
 	return function(editor) {
-		var dom = editor.dom, tableGrid, startCell, startTable, hasCellSelection = true;
+		var dom = editor.dom, tableGrid, startCell, startTable, hasCellSelection = true, resizing;
 
 		function clear(force) {
 			// Restore selection possibilities
@@ -39,6 +39,10 @@ define("tinymce/tableplugin/CellSelection", [
 
 		function cellSelectionHandler(e) {
 			var sel, table, target = e.target;
+
+			if (resizing) {
+				return;
+			}
 
 			if (startCell && (tableGrid || target != startCell) && (target.nodeName == 'TD' || target.nodeName == 'TH')) {
 				table = dom.getParent(target, 'table');
@@ -73,7 +77,7 @@ define("tinymce/tableplugin/CellSelection", [
 
 		// Add cell selection logic
 		editor.on('MouseDown', function(e) {
-			if (e.button != 2) {
+			if (e.button != 2 && !resizing) {
 				clear();
 
 				startCell = dom.getParent(e.target, 'td,th');
@@ -158,6 +162,10 @@ define("tinymce/tableplugin/CellSelection", [
 		editor.on('KeyUp Drop SetContent', function(e) {
 			clear(e.type == 'setcontent');
 			startCell = tableGrid = startTable = null;
+		});
+
+		editor.on('ObjectResizeStart ObjectResized', function(e) {
+			resizing = e.type != 'ObjectResized';
 		});
 
 		return {
